# personal-llm

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
deploy/: README.md  install-sleep-timer.sh  run-sleep.sh  uninstall-sleep-timer.sh
deploy/systemd/: personal-llm-sleep.service.in  personal-llm-sleep.timer
docker/: README.md
docker/sandbox/: Dockerfile
docs/: ARCHITECTURE.md  FACT_GRADING.md  GETTING_STARTED.md  LEARNING_FROM_TRANSCRIPTS.md  PRIOR_ART.md
docs/research/: README.md
examples/identities/: coding-buddy.md  journaling-companion.md  minimal.md
examples/vault-skeleton/: README.md  config.example.yaml  identity.example.md
examples/vault-skeleton/skills/: README.md
examples/vault-skeleton/wiki/: index.md
src/personal_llm/: __init__.py  __main__.py  cli.py  config.py  identity.py  vault.py
src/personal_llm/agent/: __init__.py  loop.py  smol.py  tools.py
src/personal_llm/builtin_skills/: __init__.py
src/personal_llm/documents/: chunking.py  parsers.py  pipeline.py  wiki.py
src/personal_llm/inference/: __init__.py  local.py
src/personal_llm/interface/: __init__.py  chat.py
src/personal_llm/learning/: __init__.py  dedup.py  distill.py  embeddings.py  grading.py  llm_grading.py  runner.py  transcripts.py
src/personal_llm/memory/: __init__.py  backend.py  jsonl.py  simple.py  sqlite.py  vector.py
src/personal_llm/skills/: __init__.py  model.py  registry.py
tests/: conftest.py  test_agent_tools.py  test_chat_turn.py  test_documents_chunking.py  test_documents_parsers.py  test_documents_pipeline.py  test_documents_wiki.py  test_fact_retrieval.py  test_inference_local.py  test_learning_dedup.py  test_learning_distill.py  test_learning_embeddings.py  test_learning_grading.py  test_learning_llm_grading.py  test_learning_runner.py  test_learning_transcripts.py  test_memory_backend.py  test_memory_vector.py  test_read_vault_file.py  test_search_library.py  test_skills_registry.py  test_sleep_runner.py  test_smol_agent_integration.py
(+7 files in other folders)
